--- a/apps/templates/_helpers/_base.html
+++ b/apps/templates/_helpers/_base.html
@@ -90,7 +90,7 @@
 
 
 <footer>
-    &copy; 2023 Yevhen Yalovenko Django base project. All rights reserved.
+    &copy; 2023 Yevhen Yalovenko Django homework-17. All rights reserved.
 </footer>
 </body>
 </html>
