--- a/apps/templates/_helpers/_header.html
+++ b/apps/templates/_helpers/_header.html
@@ -6,4 +6,7 @@
     <a href="{% url 'base:home_page' %}"> Home </a>
     <a href="{% url 'base:about' %}"> About Us </a>
     <a href="{% url 'contacts:contact_list' %}"> Contact Base</a>
+    {% if user.is_superuser %}
+        <a href="{% url 'admin:index' %}"> Admin </a>
+    {% endif %}
 </nav>
