--- a/apps/templates/contacts/_contacts_list_base.html
+++ b/apps/templates/contacts/_contacts_list_base.html
@@ -2,6 +2,14 @@
     <a href="{% url 'contacts:contact_create' %}">
         <button>Create</button>
     </a>
+    {% if user.is_superuser %}
+        <a href="{% url 'contacts:contacts_generate' %}">
+            <button> Generate contacts</button>
+        </a>
+        <a href="{% url 'contacts:contacts_delete' %}">
+            <button> Delete contacts</button>
+        </a>
+    {% endif %}
 </div>
 
 <ol>
@@ -12,8 +20,8 @@
                     <span><b>Contact</b>: {{ contact.name }}</span>
                     <br>
                     {% if contact.birthday %}
-                     <span><b>Birthday</b>: {{ contact.birthday }}</span>
-                        {% else %}
+                        <span><b>Birthday</b>: {{ contact.birthday }}</span>
+                    {% else %}
                         <span><b>Birthday</b>: Unknown</span>
                     {% endif %}
                 </div>
