update aggregation_info.py and views.py (some fixes for services and optimize get_context_data function for ContactsListView)

--- a/apps/templates/contacts/contact_list.html
+++ b/apps/templates/contacts/contact_list.html
@@ -3,8 +3,8 @@
 {% block content %}
     <h1>Contacts</h1>
     <h2>{{ contact_data_types_counts }}</h2>
-    <h3>Youngest contact {{ youngest_contact }}, his age {{ youngest_age }}</h3>
-    <h3>Oldest contact {{ oldest_contact }}, his age {{ oldest_age }}</h3>
+    <h3>Youngest contact {{ youngest_info.contact }}, his age {{ youngest_info.age }}</h3>
+    <h3>Oldest contact {{ oldest_info.contact }}, his age {{ oldest_info.age }}</h3>
     <h3>Average age {{ average_age }}</h3>
 
 
