--- a/apps/templates/contacts/contact_list.html
+++ b/apps/templates/contacts/contact_list.html
@@ -2,9 +2,14 @@
 
 {% block content %}
     <h1>Contacts</h1>
-    <h2>{{ contact_data_types_counts }}</h2>
-    <h3>Youngest contact {{ youngest_info.contact }}, his age {{ youngest_info.age }}</h3>
-    <h3>Oldest contact {{ oldest_info.contact }}, his age {{ oldest_info.age }}</h3>
+    <h3>
+    Current contacts data types:
+       {% for item in contact_data_types_counts %}
+        	 <ol>{{ forloop.counter }}.{{ item }}</ol>
+        {% endfor %}
+    </h3>
+    <h3>Youngest contact {{ youngest_birthdate }}, his age {{ youngest_age }}</h3>
+    <h3>Oldest contact {{ oldest_birthdate }}, his age {{ oldest_age }}</h3>
     <h3>Average age {{ average_age }}</h3>
 
 
